--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ description: > # this means to ignore newlines until "baseurl:"
 baseurl: "home" # the subpath of your site, e.g. /blog
 url: "http://yourdomain.com" # the base hostname & protocol for your site
 github_username:  tbarc
-twitter_username:  
+twitter_username:  tyler
 
 # Build settings
 markdown: kramdown
