--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: Tyler Bugbee - Aspiring Software Engineer
+title: Tyler Bugbee
 email: tbugbee1@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
   This blog serves as an ongoing portfolio for my various projects, research interests,
