--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ email: tbugbee1@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
   This blog serves as an ongoing portfolio for my various projects, research interests,
   and academics. Please feel free to contact me directly - email is best.
-baseurl: "home" # the subpath of your site, e.g. /blog
+baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://yourdomain.com" # the base hostname & protocol for your site
 github_username:  tbarc
 twitter_username:  tyler
