--- a/_config.yml
+++ b/_config.yml
@@ -14,6 +14,7 @@ description: > # this means to ignore newlines until "baseurl:"
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://yourdomain.com" # the base hostname & protocol for your site
 github_username:  tbarc
+linkedin_username: tylerbugbee
 
 # Build settings
 markdown: kramdown
