--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ description: > # this means to ignore newlines until "baseurl:"
   This blog serves as an ongoing portfolio for my various projects, research interests,
   and academics. Please feel free to contact me directly - email is best.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://yourdomain.com" # the base hostname & protocol for your site
+url: "http://www.tylerbugbee.com" # the base hostname & protocol for your site
 github_username:  tbarc
 linkedin_username: tylerbugbee
 
